--- a/tmall-data/pom.xml
+++ b/tmall-data/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
+    <groupId>com.liferyan</groupId>
     <artifactId>tmall</artifactId>
-    <groupId>com.com.liferyan</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>tmall-data</artifactId>
