--- a/tmall-data/src/main/resources/dev/log4j.properties
+++ b/tmall-data/src/main/resources/dev/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=INFO,stdout,logfile
-#log4j.logger.com.liferyan.tmall.data.entity=DEBUG
+log4j.logger.com.liferyan.tmall.data.entity=DEBUG
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%F:%L] - %m%n
