--- a/tmall-service/pom.xml
+++ b/tmall-service/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.liferyan</groupId>
     <artifactId>tmall</artifactId>
+    <groupId>com.liferyan</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>tmall-data</artifactId>
-  <name>tmall-data</name>
+  <artifactId>tmall-service</artifactId>
+  <name>tmall-service</name>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
 
@@ -23,24 +23,33 @@
       <artifactId>hamcrest-all</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
+      <artifactId>mybatis-spring</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.liferyan</groupId>
+      <artifactId>tmall-data</artifactId>
+    </dependency>
   </dependencies>
+
 </project>
