--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <taglibs.version>1.1.2</taglibs.version>
     <mysql-connector.version>5.1.42</mysql-connector.version>
     <spring.version>4.3.8.RELEASE</spring.version>
+    <aspectj-weaver.version>1.8.10</aspectj-weaver.version>
     <mybatis.version>3.4.4</mybatis.version>
     <mybatis-spring.version>1.3.1</mybatis-spring.version>
     <tmall-data-version>1.0-SNAPSHOT</tmall-data-version>
@@ -114,6 +115,16 @@
             <artifactId>commons-logging</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>${aspectj-weaver.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
