--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,9 @@
     <slf4j.version>1.7.21</slf4j.version>
     <commons-lang3.version>3.4</commons-lang3.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
-    <servlet-api.version>3.1.0</servlet-api.version>
+    <servlet-api.version>3.0.1</servlet-api.version>
     <jsp-api.version>2.2</jsp-api.version>
     <jstl.version>1.2</jstl.version>
-    <taglibs.version>1.1.2</taglibs.version>
     <mysql-connector.version>5.1.42</mysql-connector.version>
     <spring.version>4.3.8.RELEASE</spring.version>
     <aspectj-weaver.version>1.8.10</aspectj-weaver.version>
@@ -96,11 +95,6 @@
         <version>${jstl.version}</version>
       </dependency>
       <dependency>
-        <groupId>taglibs</groupId>
-        <artifactId>standard</artifactId>
-        <version>${taglibs.version}</version>
-      </dependency>
-      <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>${mysql-connector.version}</version>
@@ -135,6 +129,12 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.mybatis</groupId>
