--- a/tmall-web/src/main/resources/prod/log4j.properties
+++ b/tmall-web/src/main/resources/prod/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%F:%L] - %m%n
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=D:\\Log\\tmall\\tmall.log
+log4j.appender.logfile.File=/home/dingr/logs/tmall/tmall.log
 log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%F:%L] - %m%n
