--- a/tmall-web/src/main/resources/test/jdbc.properties
+++ b/tmall-web/src/main/resources/test/jdbc.properties
@@ -1,6 +1,5 @@
-db_driver=com.mysql.jdbc.Driver
-db_url=jdbc:mysql://127.0.0.1:3306/tmall?characterEncoding=UTF-8&useSSL=false
-db_username=root
-db_password=123456
-
+db_driver=org.h2.Driver
+db_url=jdbc:h2:tcp://localhost/~/tmall
+db_username=sa
+db_password=sa
 
