--- a/tmall-web/src/main/webapp/WEB-INF/web.xml
+++ b/tmall-web/src/main/webapp/WEB-INF/web.xml
@@ -5,15 +5,20 @@
                       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
 
   <context-param>
-    <param-name>contextClass</param-name>
-    <param-value>
-      org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-    </param-value>
+    <param-name>spring.profiles.default</param-name>
+    <param-value>dev</param-value>
   </context-param>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>com.liferyan.tmall.data.config.DaoConfig</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>contextClass</param-name>
+    <param-value>
+      org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+    </param-value>
   </context-param>
 
   <listener>
