--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <jsp-api.version>2.2</jsp-api.version>
     <jstl.version>1.2</jstl.version>
     <mysql-connector.version>5.1.42</mysql-connector.version>
+    <h2.version>1.4.195</h2.version>
     <spring.version>4.3.8.RELEASE</spring.version>
     <aspectj-weaver.version>1.8.10</aspectj-weaver.version>
     <mybatis.version>3.4.4</mybatis.version>
@@ -50,6 +51,11 @@
         <artifactId>hamcrest-all</artifactId>
         <version>${hamcrest.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -161,8 +167,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
@@ -190,8 +196,9 @@
         <directory>src/main/resources</directory>
         <!-- 资源根目录排除各环境的配置，使用单独的资源目录来指定 -->
         <excludes>
-          <exclude>test/*</exclude>
           <exclude>dev/*</exclude>
+          <exclude>test/*</exclude>
+          <exclude>prod/*</exclude>
         </excludes>
       </resource>
       <resource>
@@ -202,7 +209,7 @@
 
   <profiles>
     <profile>
-      <!-- 本地开发环境 -->
+      <!-- 开发环境 -->
       <id>dev</id>
       <properties>
         <profiles.active>dev</profiles.active>
@@ -213,10 +220,21 @@
       </activation>
     </profile>
     <profile>
-      <!-- 远程测试环境 -->
+      <!-- 测试环境 -->
       <id>test</id>
       <properties>
         <profiles.active>test</profiles.active>
+        <deploy.url>http://192.168.199.228:8080/manager/text</deploy.url>
+      </properties>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+    </profile>
+    <profile>
+      <!-- 生产环境 -->
+      <id>prod</id>
+      <properties>
+        <profiles.active>prod</profiles.active>
         <deploy.url>http://139.224.186.166:9080/manager/text</deploy.url>
       </properties>
       <activation>
