--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <junit.version>4.12</junit.version>
     <hamcrest.version>1.3</hamcrest.version>
+    <mockito.version>2.7.22</mockito.version>
     <slf4j.version>1.7.21</slf4j.version>
     <commons-lang3.version>3.4</commons-lang3.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
@@ -50,6 +51,12 @@
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>${hamcrest.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -134,6 +141,11 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
