--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <hamcrest.version>1.3</hamcrest.version>
     <mockito.version>2.7.22</mockito.version>
     <slf4j.version>1.7.21</slf4j.version>
+    <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
+    <javax-el.version>2.2</javax-el.version>
     <commons-lang3.version>3.4</commons-lang3.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
     <servlet-api.version>3.0.1</servlet-api.version>
@@ -58,6 +60,17 @@
         <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>el-impl</artifactId>
+        <version>${javax-el.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${hibernate-validator.version}</version>
       </dependency>
       <dependency>
         <groupId>com.h2database</groupId>
