--- a/tmall-web/src/main/resources/dev/ValidationMessages.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages.properties
@@ -3,3 +3,4 @@ lastName.size=Last name must be between {min} and {max} characters long.
 username.size=Username must be between {min} and {max} characters long.
 password.size=Password must be between {min} and {max} characters long.
 email.valid=The email address must be valid.
+category.name.size=category name must be between {min} and {max} characters long
