--- a/tmall-web/src/main/webapp/WEB-INF/web.xml
+++ b/tmall-web/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>com.liferyan.spittr.config.RootConfig</param-value>
+    <param-value>com.liferyan.tmall.data.config.DaoConfig</param-value>
   </context-param>
 
   <listener>
@@ -25,7 +25,7 @@
   </listener>
 
   <servlet>
-    <servlet-name>appServlet</servlet-name>
+    <servlet-name>DispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextClass</param-name>
@@ -34,13 +34,13 @@
     </init-param>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>com.liferyan.spittr.web.WebConfig</param-value>
+      <param-value>com.liferyan.tmall.web.WebConfig</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>appServlet</servlet-name>
+    <servlet-name>DispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
