--- a/tmall-web/src/main/resources/dev/ValidationMessages.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages.properties
@@ -4,3 +4,12 @@ username.size=Username must be between {min} and {max} characters long.
 password.size=Password must be between {min} and {max} characters long.
 email.valid=The email address must be valid.
 category.name.size=category name must be between {min} and {max} characters long
+property.name.size=property name must be between {min} and {max} characters long
+product.name.size=product name must be between {min} and {max} characters long
+product.subtitle.size=product subtitle must be between {min} and {max} characters long
+product.original_price.min=product original price must be higher to {value}
+product.original_price.empty=product original price must not be empty
+product.promote_price.min=product promote price must be higher to {value}
+product.promote_price.empty=product promote price must not be empty
+product.stock.min=product stock must be higher or equal to {value}
+product.stock.empty=product stock must not be empty
