1.refactor controller 2.add homeController and userController

--- a/tmall-web/src/main/resources/dev/ValidationMessages.properties
+++ b/tmall-web/src/main/resources/dev/ValidationMessages.properties
@@ -13,3 +13,5 @@ product.promote_price.min=product promote price must be higher to {value}
 product.promote_price.empty=product promote price must not be empty
 product.stock.min=product stock must be higher or equal to {value}
 product.stock.empty=product stock must not be empty
+user.name.size=user name must be between {min} and {max} characters long.
+user.password.size=user password must be between {min} and {max} characters long.
